# Wiz

./: .gitignore  README.md  pyproject.toml  wiz.json
.github/workflows/: ci.yml
dev_env/: pyvenv.cfg
dev_env/Scripts/: activate  activate.bat
src/python_wiz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/wiz/: __main__.py  cli.py  styles.py  utils.py
src/wiz/quality/: __init__.py  runner.py  templates.py
tests/: test_cli.py
