[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wiz-engine"
version = "0.1.0"
description = "Interactive TUI & Non-Interactive Automation Engine for Python Environments"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Jayesh Sharma" }
]
keywords = ["cli", "tui", "uv", "pip", "virtualenv", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]

[project.scripts]
wiz = "wiz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
